--- a/StayHome/AddFriendVC.xib
+++ b/StayHome/AddFriendVC.xib
@@ -15,13 +15,14 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddFriendVC" customModule="StayHome" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddFriendVC" customModule="LazyApp" customModuleProvider="target">
             <connections>
                 <outlet property="addButton" destination="yBo-9x-xiO" id="lUY-Us-Ngl"/>
                 <outlet property="addFriendLabel" destination="b2c-QT-B26" id="XY6-HO-abI"/>
                 <outlet property="addStackView" destination="015-ME-5Ht" id="DDx-mj-poB"/>
                 <outlet property="codeField" destination="d9W-gE-9RU" id="o7x-9s-KqT"/>
                 <outlet property="codeLabel" destination="YaU-A8-2BL" id="lLF-ey-bkl"/>
+                <outlet property="copiedLabel" destination="YIL-yS-pJt" id="HDB-az-Cd4"/>
                 <outlet property="copyLinkButton" destination="mF8-4i-Llc" id="Ccx-n6-lWg"/>
                 <outlet property="fieldView" destination="uSe-4c-Hke" id="Q2i-L3-nHi"/>
                 <outlet property="inviteLinkLabel" destination="Nws-fV-t4f" id="0WI-gw-JYN"/>
@@ -39,24 +40,30 @@
                     <rect key="frame" x="8" y="162" width="398" height="664"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="E8M-Ce-yH9">
-                            <rect key="frame" x="43.5" y="0.0" width="311" height="313.5"/>
+                            <rect key="frame" x="43.5" y="0.0" width="311" height="347"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHARE YOUR CODE TO INVITE FRIENDS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nws-fV-t4f">
-                                    <rect key="frame" x="0.0" y="0.0" width="311" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="311" height="18"/>
                                     <fontDescription key="fontDescription" name="Lato-Thin" family="Lato" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CODE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaU-A8-2BL">
-                                    <rect key="frame" x="118" y="36.5" width="75.5" height="32.5"/>
+                                    <rect key="frame" x="118" y="34" width="75.5" height="32.5"/>
                                     <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="27"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIL-yS-pJt">
+                                    <rect key="frame" x="153" y="82.5" width="5" height="20.5"/>
+                                    <fontDescription key="fontDescription" name="Lato-Thin" family="Lato" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="zKE-Yi-ZsJ">
-                                    <rect key="frame" x="123.5" y="85" width="64" height="64"/>
+                                    <rect key="frame" x="73.5" y="119" width="164" height="64"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mF8-4i-Llc" customClass="LazyButton" customModule="StayHome" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mF8-4i-Llc" customClass="LazyButton" customModule="LazyApp" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="64" id="ew9-Xk-yhU"/>
@@ -66,11 +73,10 @@
                                             <state key="normal" image="square.and.arrow.down.fill" catalog="system"/>
                                             <connections>
                                                 <action selector="copyCodeTapped:" destination="-1" eventType="touchUpInside" id="1cA-Yp-k5Y"/>
-                                                <action selector="copyLinkTapped:" destination="-1" eventType="touchUpInside" id="d43-jj-vnF"/>
                                             </connections>
                                         </button>
-                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="keM-kN-Rai" customClass="LazyButton" customModule="StayHome" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="keM-kN-Rai" customClass="LazyButton" customModule="LazyApp" customModuleProvider="target">
+                                            <rect key="frame" x="100" y="0.0" width="64" height="64"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="64" id="XBz-W1-t4l"/>
                                                 <constraint firstAttribute="width" constant="64" id="XHN-sr-u6Z"/>
@@ -84,7 +90,7 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s1m-Tt-BUc">
-                                    <rect key="frame" x="16.5" y="165" width="278" height="148.5"/>
+                                    <rect key="frame" x="16.5" y="199" width="278" height="148"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lLc-70-xNG">
                                             <rect key="frame" x="129" y="64.5" width="20" height="19"/>
@@ -99,13 +105,12 @@
                                     <constraints>
                                         <constraint firstItem="lLc-70-xNG" firstAttribute="centerY" secondItem="s1m-Tt-BUc" secondAttribute="centerY" id="ORF-jv-4hd"/>
                                         <constraint firstItem="lLc-70-xNG" firstAttribute="centerX" secondItem="s1m-Tt-BUc" secondAttribute="centerX" id="nOF-Uk-7qk"/>
-                                        <constraint firstAttribute="width" secondItem="s1m-Tt-BUc" secondAttribute="height" multiplier="15:8" id="rsk-Ac-duR"/>
                                     </constraints>
                                 </view>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="015-ME-5Ht">
-                            <rect key="frame" x="42.5" y="349.5" width="313.5" height="96.5"/>
+                            <rect key="frame" x="42.5" y="383" width="313.5" height="96"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TO ADD A FRIEND TYPE ITS CODE HERE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b2c-QT-B26">
                                     <rect key="frame" x="0.0" y="0.0" width="313.5" height="20.5"/>
@@ -114,10 +119,10 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uSe-4c-Hke">
-                                    <rect key="frame" x="28.5" y="56.5" width="256" height="40"/>
+                                    <rect key="frame" x="28.5" y="56.5" width="256" height="39.5"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d9W-gE-9RU">
-                                            <rect key="frame" x="8" y="0.0" width="160" height="40"/>
+                                            <rect key="frame" x="8" y="0.0" width="157.5" height="39.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="d9W-gE-9RU" secondAttribute="height" multiplier="4:1" id="3Wl-Ic-RbA"/>
                                                 <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="lvC-cT-4nu"/>
@@ -129,7 +134,7 @@
                                             </connections>
                                         </textField>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBo-9x-xiO">
-                                            <rect key="frame" x="168" y="0.0" width="88" height="40"/>
+                                            <rect key="frame" x="165.5" y="0.0" width="90.5" height="39.5"/>
                                             <color key="backgroundColor" red="0.96253746750000002" green="0.83969646689999999" blue="0.49012261629999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="20"/>
                                             <state key="normal" title="  Add  ">
@@ -154,7 +159,7 @@
                             </subviews>
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rda-H7-bHs">
-                            <rect key="frame" x="28.5" y="482" width="341" height="182"/>
+                            <rect key="frame" x="59.5" y="515" width="279" height="149"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="tintColor" red="0.1215686275" green="0.78039215689999997" blue="0.38431372549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
